feat(auth): support login as company and sync stale blade routes
